log
Fri Apr 17 12:13:07 AM UTC 2026: 
 tests:  0|7
total_score: 0/60
6560ebd
Fri Apr 17 02:04:39 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:48:37: error: too few arguments to function ‘calloc’
   48 |     HashMap *nuevoMapa = (HashMap*) calloc(sizeof(HashMap));
      |                                     ^~~~~~
In file included from test.c:2:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdlib.h:675:14: note: declared here
  675 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
50fd0f6
Fri Apr 17 02:05:02 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
74d835e
Fri Apr 17 02:14:33 PM UTC 2026: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:5: error: ‘map’ undeclared (first use in this function)
   49 |     map ->size = 0;
      |     ^~~
hashmap.c:49:5: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:53:9: error: ‘buckets’ undeclared (first use in this function)
   53 |     map-buckets = (Pair **) malloc((sizeof(Pair)) * capacity);
      |         ^~~~~~~
hashmap.c:54:9: error: ‘i’ undeclared (first use in this function)
   54 |     for(i = 0; i < capacity ;i++){
      |         ^
4be6b8b
Fri Apr 17 02:14:50 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:5: error: ‘map’ undeclared (first use in this function)
   49 |     map ->size = 0;
      |     ^~~
hashmap.c:49:5: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:53:9: error: ‘buckets’ undeclared (first use in this function)
   53 |     map-buckets = (Pair **) malloc((sizeof(Pair)) * capacity);
      |         ^~~~~~~
fa72c43
Fri Apr 17 02:16:12 PM UTC 2026: 
 hashmap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  1|6
total_score: 5/60
264db37
Fri Apr 17 02:29:06 PM UTC 2026: 
 hashmap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:77:25: error: array subscript is not an integer
   77 |         if (map->buckets[index]->key == NULL) {
      |                         ^
hashmap.c:81:29: error: invalid operands to binary % (have ‘char * (*)(const char *, int)’ and ‘long int’)
   81 |         index = (index + 1) % map->capacity;
      |                 ~~~~~~~~~~~ ^ ~~~~~~~~~~~~~
      |                        |         |
      |                        |         long int
      |                        char * (*)(const char *, int)
hashmap.c:84:22: error: ‘startIndex’ undeclared (first use in this function)
   84 |         if (index == startIndex) {
      |                      ^~~~~~~~~~
hashmap.c:84:22: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:90:17: error: array subscript is not an integer
   90 |     map->buckets[index] = createPair(key, value);
      |                 ^
hashmap.c:93:18: error: assignment to ‘long int’ from ‘char * (*)(const char *, int)’ makes integer from pointer without a cast [-Wint-conversion]
   93 |     map->current = index;
      |                  ^
hashmap.c:71:10: error: unused variable ‘indiceInicial’ [-Werror=unused-variable]
   71 |     long indiceInicial = indice;
      |          ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
ca791d2
Fri Apr 17 02:52:51 PM UTC 2026: 
 hashmap.c | 13 +++++--------
 1 file changed, 5 insertions(+), 8 deletions(-)
 tests:  5|4
total_score: 20/60
031c4f5
Fri Apr 17 03:02:23 PM UTC 2026: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  8|3
total_score: 30/60
e11bc18
Fri Apr 17 03:10:38 PM UTC 2026: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘eraseMap’:
hashmap.c:132:26: error: assignment to ‘long int’ from ‘char * (*)(const char *, int)’ makes integer from pointer without a cast [-Wint-conversion]
  132 |             map->current = index;
      |                          ^
hashmap.c:137:39: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
  137 |         if (indice == Inicial) return NULL;
      |                                       ^~~~
hashmap.c:122:6: note: declared here
  122 | void eraseMap(HashMap * map,  char * key) {
      |      ^~~~~~~~
3a439be
Fri Apr 17 03:11:54 PM UTC 2026: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘eraseMap’:
hashmap.c:138:20: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
  138 |             return NULL;
      |                    ^~~~
hashmap.c:122:6: note: declared here
  122 | void eraseMap(HashMap * map,  char * key) {
      |      ^~~~~~~~
60e9084
Fri Apr 17 03:12:59 PM UTC 2026: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  11|2
total_score: 40/60
1b172ca
Fri Apr 17 03:23:47 PM UTC 2026: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  11|2
total_score: 40/60
934bdc0
Fri Apr 17 03:29:44 PM UTC 2026: 
 hashmap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘nextMap’:
hashmap.c:172:25: error: subscripted value is neither array nor pointer nor vector
  172 |         if (map->current[i] != NULL && map->buckets[i]->key != NULL){
      |                         ^
2968494
Fri Apr 17 03:30:08 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 40/60
b0d3015
Fri Apr 17 03:30:55 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 40/60
dcb1430
